--- a/styles.css
+++ b/styles.css
@@ -20,10 +20,10 @@ table,
 tr,
 td {
     border: 1px solid black;
-    -webkit-user-select: none; /* Safari 3.1+ */
-    -moz-user-select: none; /* Firefox 2+ */
-    -ms-user-select: none; /* IE 10+ */
-    user-select: none; /* Standard syntax */
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE */
+    user-select: none; /* standard */
 }
 
 table {
