--- a/styles.css
+++ b/styles.css
@@ -1,25 +1,35 @@
+*{
+    box-sizing: border-box;
+  }
 body {
-    text-align: center;
-}
-
-h1 {
-    font-family: Monoton;
-    font-size: 70px;
-    margin: 0.2em;
-}
-
-h2 {
-    margin: 1em 0 0.25em;
+    background-color: rgb(42, 65, 92);
 }
 
 h2:first-of-type {
     margin-top: 0.5em;
+    font-size: 1.5em;
+    padding: 0;
+    color: #fff;
 }
 
+h5 {
+    color: #fff;
+}
+
+h3 {
+    display: block;
+    font-size: 1.2em;
+    -webkit-margin-before: 1em;
+    -webkit-margin-after: 1em;
+    -webkit-margin-start: 0px;
+    -webkit-margin-end: 0px;
+    font-weight: bold;
+    
+}
 table,
 tr,
 td {
-    border: 1px solid black;
+    border: 1px dotted rgb(108, 121, 145);
     -webkit-user-select: none; /* Safari */
     -moz-user-select: none; /* Firefox */
     -ms-user-select: none; /* IE */
@@ -28,18 +38,27 @@ td {
 
 table {
     border-collapse: collapse;
-    margin: 0 auto;
+    margin: auto auto;
+    width: auto;
+    height: auto;
 }
 
 tr {
-    height: 20px;
+    padding: 0;
+    margin: 0;
 }
 
 td {
-    width: 20px;
     cursor: pointer;
+    display: table-cell;
+    padding: 0;
+    text-align: left;
+    vertical-align: middle;
+    border-radius: 0;
+    width: 20px;
+    height: 10px;
 }
 
-input[type=number] {
-    width: 6em;
-}
+/*input[type=number] {
+    width: 5em;
+}*/
